trying to reconcile rock8 and fermate

--- a/markov8pat_inst16bass.ipynb
+++ b/markov8pat_inst16bass.ipynb
@@ -70,23 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "bassgen16pairs (generic function with 1 method)"
+       "bassgen16 (generic function with 1 method)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#output bass notes in 2*$beats sixteenth notes\n",
-    "function bassgen16pairs(beats, transmat, iv)\n",
+    "function bassgen16(beats, transmat, iv)\n",
     "    nextv = iv\n",
     "    L = []\n",
     "    for j = 1:beats\n",
@@ -180,35 +180,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "abctime16ride16bass (generic function with 1 method)"
+       "abctime8ride16bass (generic function with 1 method)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#input a sixteenth note bass rhythm and an 8th note ride pattern, output abc notation\n",
-    "function abctime16ride16bass(L, pattern)\n",
+    "function abctime8ride16bass(L, pattern)\n",
     "    n = length(L)\n",
     "    r = Vector(undef, 10)\n",
-    "    r[1] = [\"[^e\", \"[^e\", \"[^e\", \"[^e\", \"[c^e\", \"[^e\", \"[^e\", \"[^e\", \"[^e\", \"[^e\", \"[^e\", \"[^e\", \"[c^e\", \"[^e\", \"[^e\", \"[^e\"]; #hihat 16\n",
-    "    r[2] = [\"[^g\", \"[^g\", \"[^g\", \"[^g\", \"[c^g\", \"[^g\", \"[^g\", \"[^g\", \"[^g\", \"[^g\", \"[^g\", \"[^g\", \"[c^g\", \"[^g\", \"[^g\", \"[^g\"]; #ride 16 \n",
-    "    r[3] = [\"[^g^D\", \"[^g\", \"[^g\", \"[^g\", \"[c^g^D\", \"[^g\", \"[^g\", \"[^g\", \"[^g^D\", \"[^g\", \"[^g\", \"[^g\", \"[c^g^D\", \"[^g\", \"[^g\", \"[^g\"]; #ride 16 with step beats\n",
-    "    r[4] = [\"[^g\", \"[^g\", \"[^g^D\", \"[^g\", \"[c^g\", \"[^g\", \"[^g^D\", \"[^g\", \"[^g\", \"[^g\", \"[^g^D\", \"[^g\", \"[c^g\", \"[^g\", \"[^g^D\", \"[^g\" ]; #ride 16 with step ands\n",
-    "    r[5] = [\"[\",\"[g\",\"[c\",\"[g\",\"[\",\"[g\",\"[c\",\"[g\"]\n",
-    "    r[6] = [\"[^e\",\"[_e\",\"[c^e\",\"[_e\",\"[^e\",\"[_e\",\"[c^e\",\"[_e\"]\n",
-    "    r[7] = [\"[^e\",\"[^e\",\"[c^e\",\"[^e\",\"[^e\",\"[_e\",\"[c^e\",\"[_e\"]\n",
-    "    r[8] = [\"[^e\", \"[^e\", \"[^e\", \"[^e\", \"[c^e\", \"[^e\", \"[^e\", \"[^e\", \"[^e\", \"[^e\", \"[^e\", \"[^e\", \"[c^e\", \"[^e\", \"[^e\", \"[_e\"];  #one slide 16\n",
-    "    r[9] = [\"!>![^e\", \"u[^e\", \"!>![^e\", \"u[^e\", \"!>![c^e\", \"u[^e\",\"!>![^e\", \"u[^e\",\"!>![^e\", \"u[^e\", \"!>![^e\", \"u[^e\", \"!>![c^e\", \"u[^e\", \"!>![^e\", \"u[^e\"]; #drive 16\n",
-    "    r[10] = [\"[g^D\",\"[^D\",\"[cg^D\",\"[^D\",\"[g^D\",\"[^D\",\"[cg^D\",\"[^D\"]\n",
+    "    r[1] = [\"[^e\",\"[^e\",\"[c^e\",\"[^e\",\"[^e\",\"[^e\",\"[c^e\",\"[^e\"] #hihat 8\n",
+    "    r[2] = [\"[^g\",\"[\",\"[c^g\",\"[\",\"[^g\",\"[\",\"[c^g\",\"[\"] #ride quarter\n",
+    "    r[3] = [\"[^g^D\",\"[^g\",\"[c^g^D\",\"[^g\",\"[^g^D\",\"[^g\",\"[c^g^D\",\"[^g\"] #ride 8 with step beats\n",
+    "    r[4] = [\"[^g\",\"[^g^D\",\"[c^g\",\"[^g^D\",\"[^g\",\"[^g^D\",\"[c^g\",\"[^g^D\"] #ride 8 with step ands\n",
+    "    r[5] = [\"[\",\"[g\",\"[c\",\"[g\",\"[\",\"[g\",\"[c\",\"[g\"] #bell ands\n",
+    "    r[6] = [\"[^e\",\"[_e\",\"[c^e\",\"[_e\",\"[^e\",\"[_e\",\"[c^e\",\"[_e\"] #slide every and\n",
+    "    r[7] = [\"[^e\",\"[^e\",\"[c^e\",\"[^e\",\"[^e\",\"[_e\",\"[c^e\",\"[_e\"]  #slide last 2 ands\n",
+    "    r[8] = [\"[^e\",\"[^e\",\"[c^e\",\"[^e\",\"[^e\",\"[^e\",\"[c^e\",\"[_e\"] #slide last and\n",
+    "    r[9] = [\"!>![^e\",\"u[^e\",\"!>![c^e\",\"u[^e\",\"!>![^e\",\"u[^e\",\"!>![c^e\",\"u[^e\"] #drive 8\n",
+    "    r[10] = [\"[g^D\",\"[^D\",\"[cg^D\",\"[^D\",\"[g^D\",\"[^D\",\"[cg^D\",\"[^D\"] #step 8 with bell beats\n",
     "    c = [\"]y\",\"]/2[F/2]\",\"F]y\",\"F]/2[F/2]\"]\n",
     "    m = [c[L[i] + 1] for i = 1:n]\n",
     "    s = \"\"\n",
@@ -435,30 +435,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "abctune16ride16bass (generic function with 1 method)"
+       "abctune8ride16bass (generic function with 1 method)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#output time, fill, time, fill with cresc/decr in abc notation\n",
-    "function abctune16ride16bass(\n",
+    "function abctune8ride16bass(\n",
     "  vol,\n",
     "  bass,\n",
     "  time,\n",
     "  fill,\n",
     "  crdc)\n",
     "    fp = [\"!pp!\",\"!p!\",\"!mp!\",\"!mf!\",\"!f!\",\"!ff!\"]\n",
-    "    return(\"|:\" * fp[vol] * abctime16ride16bass(bass, time) * \"[1\" * abcfill16(fill, 0) * \":|2\" * abcfill16(fill, crdc))\n",
+    "    return(\"|:\" * fp[vol] * abctime8ride16bass(bass, time) * \"[1\" * abcfill16(fill, 0) * \":|2\" * abcfill16(fill, crdc))\n",
     "end\n"
    ]
   },
@@ -512,23 +512,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "abcsolo16ride16bass (generic function with 1 method)"
+       "abcsolo8ride16bass (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#put it all together, output abc notation\n",
-    "function abcsolo16ride16bass(\n",
+    "function abcsolo8ride16bass(\n",
     "  len::Int64,\n",
     "  bassmatrix::Matrix{Float64},\n",
     "  bassinitial::Vector{Float64},\n",
@@ -549,7 +549,7 @@
     "        time = curtime + 1\n",
     "        fill = fill16gen(16, fillRightToLeft, fillLeftToRight, fillInitial)\n",
     "        crdc = 2 * mod(curdyn, 2) - 1\n",
-    "        s = s * abctune16ride16bass(vol, bass, time, fill, crdc)\n",
+    "        s = s * abctune8ride16bass(vol, bass, time, fill, crdc)\n",
     "        if i + 1 < len\n",
     "            curdyn = markovrand(dynmatrix[:, curdyn + 1])\n",
     "        else\n",
