pattern and instrument separation is working

--- a/markov8ride16bass.ipynb
+++ b/markov8ride16bass.ipynb
@@ -228,77 +228,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "abctime8ride16bass (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#input a sixteenth note bass rhythm and an 8th note ride pattern, output abc notation\n",
-    "function abctime8ride16bass(L, pattern)\n",
-    "    n = length(L)\n",
-    "    r = Vector(undef, 10)\n",
-    "    r[1] = [\"[^e\",\"[^e\",\"[c^e\",\"[^e\",\"[^e\",\"[^e\",\"[c^e\",\"[^e\"] #hihat 8\n",
-    "    r[2] = [\"[^g\",\"[\",\"[c^g\",\"[\",\"[^g\",\"[\",\"[c^g\",\"[\"] #ride quarter\n",
-    "    r[3] = [\"[^g^D\",\"[^g\",\"[c^g^D\",\"[^g\",\"[^g^D\",\"[^g\",\"[c^g^D\",\"[^g\"] #ride 8 with step beats\n",
-    "    r[4] = [\"[^g\",\"[^g^D\",\"[c^g\",\"[^g^D\",\"[^g\",\"[^g^D\",\"[c^g\",\"[^g^D\"] #ride 8 with step ands\n",
-    "    r[5] = [\"[\",\"[g\",\"[c\",\"[g\",\"[\",\"[g\",\"[c\",\"[g\"] #bell ands\n",
-    "    r[6] = [\"[^e\",\"[_e\",\"[c^e\",\"[_e\",\"[^e\",\"[_e\",\"[c^e\",\"[_e\"] #slide every and\n",
-    "    r[7] = [\"[^e\",\"[^e\",\"[c^e\",\"[^e\",\"[^e\",\"[_e\",\"[c^e\",\"[_e\"]  #slide last 2 ands\n",
-    "    r[8] = [\"[^e\",\"[^e\",\"[c^e\",\"[^e\",\"[^e\",\"[^e\",\"[c^e\",\"[_e\"] #slide last and\n",
-    "    r[9] = [\"!>![^e\",\"u[^e\",\"!>![c^e\",\"u[^e\",\"!>![^e\",\"u[^e\",\"!>![c^e\",\"u[^e\"] #drive 8\n",
-    "    r[10] = [\"[g^D\",\"[^D\",\"[cg^D\",\"[^D\",\"[g^D\",\"[^D\",\"[cg^D\",\"[^D\"] #step 8 with bell beats\n",
-    "    c = [\"]y\",\"]/2[F/2]\",\"F]y\",\"F]/2[F/2]\"]\n",
-    "    m = [c[L[i] + 1] for i = 1:n]\n",
-    "    s = \"\"\n",
-    "    for i = 1:n\n",
-    "        s = s * r[pattern][(i - 1) % 8 + 1] * m[i]\n",
-    "        if i % 4 == 0\n",
-    "            s = s * \" \"\n",
-    "        end\n",
-    "        if i % 8 == 0\n",
-    "            s = s * \"|\"\n",
-    "        end\n",
-    "    end\n",
-    "    s = replace(s, \"[]\" => \"z\")\n",
-    "    s = replace(s, \"!>!\" => \"!>![I: volinc 50]\")\n",
-    "    s = replace(s, \"u\" => \"!anti![I: volinc -20]\")\n",
-    "    return(s)\n",
-    "end\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"[^gF]y[^g^DF]/2[F/2][c^g]y[^g^D]y \""
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#test\n",
-    "abctime8ride16bass(bassgen16pairs(4, rockBassMatrix, rockBassInitial), 4)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -827,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -846,13 +775,24 @@
        " 0.1  0.1  0.1  0.1  0.0  0.2  0.1  0.1  0.1  0.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rockRideMatrix = [0 0.1e0 0.1e0 0.1e0 0.2e0 0.2e0 0.2e0 0.2e0 0 0.2e0; 0.2e0 0 0.2e0 0.2e0 0.1e0 0.2e0 0.2e0 0.2e0 0.2e0 0.1e0; 0.1e0 0.1e0 0 0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0; 0.1e0 0.1e0 0 0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0; 0.2e0 0.2e0 0.2e0 0.2e0 0 0.1e0 0.1e0 0.1e0 0.2e0 0; 0 0 0 0 0 0 0 0 0 0; 0 0 0 0 0 0 0 0 0 0; 0.3e0 0.3e0 0.3e0 0.3e0 0.3e0 0 0.1e0 0.1e0 0.3e0 0.3e0; 0 0.1e0 0.1e0 0.1e0 0.2e0 0.1e0 0.1e0 0.1e0 0 0.2e0; 0.1e0 0.1e0 0.1e0 0.1e0 0 0.2e0 0.1e0 0.1e0 0.1e0 0]\n"
+    "rockRideMatrix = [\n",
+    "    #HH8 #RQ    #R8sB #R8sA #beA  #sl4A #sl2A #sl1A #HHdr8 #s8beB\n",
+    "    0     0.1e0 0.1e0 0.1e0 0.2e0 0.2e0 0.2e0 0.2e0 0     0.2e0; #HH8\n",
+    "    0.2e0 0     0.2e0 0.2e0 0.1e0 0.2e0 0.2e0 0.2e0 0.2e0 0.1e0;#RQ \n",
+    "    0.1e0 0.1e0 0     0     0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0;#R8sB \n",
+    "    0.1e0 0.1e0 0     0     0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0; #R8sA \n",
+    "    0.2e0 0.2e0 0.2e0 0.2e0 0     0.1e0 0.1e0 0.1e0 0.2e0 0; #beA \n",
+    "    0 0 0 0 0 0 0 0 0 0;  #sl4A \n",
+    "    0 0 0 0 0 0 0 0 0 0; #sl2A\n",
+    "    0.3e0 0.3e0 0.3e0 0.3e0 0.3e0 0     0.1e0 0.1e0 0.3e0 0.3e0; #sl1A\n",
+    "    0     0.1e0 0.1e0 0.1e0 0.2e0 0.1e0 0.1e0 0.1e0 0     0.2e0;  #HHdr8 \n",
+    "    0.1e0 0.1e0 0.1e0 0.1e0 0     0.2e0 0.1e0 0.1e0 0.1e0 0] #s8beB\n"
    ]
   },
   {
@@ -1234,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1253,13 +1193,23 @@
        " 0.1  0.1  0.1  0.1  0.0  0.2  0.1  0.1  0.1  0.0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "funkRideMatrix = [0 0.1e0 0.1e0 0.1e0 0.2e0 0.2e0 0.2e0 0.2e0 0 0.2e0; 0.2e0 0 0.2e0 0.2e0 0.1e0 0.2e0 0.2e0 0.2e0 0.2e0 0.1e0; 0.1e0 0.1e0 0 0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0; 0.1e0 0.1e0 0 0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0; 0.2e0 0.2e0 0.2e0 0.2e0 0 0.1e0 0.1e0 0.1e0 0.2e0 0; 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0 0.1e0 0.1e0 0.1e0 0.1e0; 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0 0 0 0.1e0 0.1e0; 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0 0 0 0.1e0 0.1e0; 0 0.1e0 0.1e0 0.1e0 0.2e0 0.1e0 0.1e0 0.1e0 0 0.2e0; 0.1e0 0.1e0 0.1e0 0.1e0 0 0.2e0 0.1e0 0.1e0 0.1e0 0]\n"
+    "funkRideMatrix = [\n",
+    "    0 0.1e0 0.1e0 0.1e0 0.2e0 0.2e0 0.2e0 0.2e0 0 0.2e0; \n",
+    "    0.2e0 0 0.2e0 0.2e0 0.1e0 0.2e0 0.2e0 0.2e0 0.2e0 0.1e0; \n",
+    "    0.1e0 0.1e0 0 0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0; \n",
+    "    0.1e0 0.1e0 0 0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0.1e0; \n",
+    "    0.2e0 0.2e0 0.2e0 0.2e0 0 0.1e0 0.1e0 0.1e0 0.2e0 0; \n",
+    "    0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0 0.1e0 0.1e0 0.1e0 0.1e0; \n",
+    "    0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0 0 0 0.1e0 0.1e0; \n",
+    "    0.1e0 0.1e0 0.1e0 0.1e0 0.1e0 0 0 0 0.1e0 0.1e0; \n",
+    "    0 0.1e0 0.1e0 0.1e0 0.2e0 0.1e0 0.1e0 0.1e0 0 0.2e0; \n",
+    "    0.1e0 0.1e0 0.1e0 0.1e0 0 0.2e0 0.1e0 0.1e0 0.1e0 0]\n"
    ]
   },
   {
@@ -1381,6 +1331,77 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"[^gF]y[^g^DF]/2[F/2][c^g]y[^g^D]y \""
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#test\n",
+    "abctime8ride16bass(bassgen16pairs(4, rockBassMatrix, rockBassInitial), 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "abctime8ride16bass (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#input a sixteenth note bass rhythm and an 8th note ride pattern, output abc notation\n",
+    "function abctime8ride16bass(L, pattern)\n",
+    "    n = length(L)\n",
+    "    r = Vector(undef, 10)\n",
+    "    r[1] = [\"[^e\",\"[^e\",\"[c^e\",\"[^e\",\"[^e\",\"[^e\",\"[c^e\",\"[^e\"] #hihat 8\n",
+    "    r[2] = [\"[^g\",\"[\",\"[c^g\",\"[\",\"[^g\",\"[\",\"[c^g\",\"[\"] #ride quarter\n",
+    "    r[3] = [\"[^g^D\",\"[^g\",\"[c^g^D\",\"[^g\",\"[^g^D\",\"[^g\",\"[c^g^D\",\"[^g\"] #ride 8 with step beats\n",
+    "    r[4] = [\"[^g\",\"[^g^D\",\"[c^g\",\"[^g^D\",\"[^g\",\"[^g^D\",\"[c^g\",\"[^g^D\"] #ride 8 with step ands\n",
+    "    r[5] = [\"[\",\"[g\",\"[c\",\"[g\",\"[\",\"[g\",\"[c\",\"[g\"] #bell ands\n",
+    "    r[6] = [\"[^e\",\"[_e\",\"[c^e\",\"[_e\",\"[^e\",\"[_e\",\"[c^e\",\"[_e\"] #slide every and\n",
+    "    r[7] = [\"[^e\",\"[^e\",\"[c^e\",\"[^e\",\"[^e\",\"[_e\",\"[c^e\",\"[_e\"]  #slide last 2 ands\n",
+    "    r[8] = [\"[^e\",\"[^e\",\"[c^e\",\"[^e\",\"[^e\",\"[^e\",\"[c^e\",\"[_e\"] #slide last and\n",
+    "    r[9] = [\"!>![^e\",\"u[^e\",\"!>![c^e\",\"u[^e\",\"!>![^e\",\"u[^e\",\"!>![c^e\",\"u[^e\"] #drive 8\n",
+    "    r[10] = [\"[g^D\",\"[^D\",\"[cg^D\",\"[^D\",\"[g^D\",\"[^D\",\"[cg^D\",\"[^D\"] #step 8 with bell beats\n",
+    "    c = [\"]y\",\"]/2[F/2]\",\"F]y\",\"F]/2[F/2]\"]\n",
+    "    m = [c[L[i] + 1] for i = 1:n]\n",
+    "    s = \"\"\n",
+    "    for i = 1:n\n",
+    "        s = s * r[pattern][(i - 1) % 8 + 1] * m[i]\n",
+    "        if i % 4 == 0\n",
+    "            s = s * \" \"\n",
+    "        end\n",
+    "        if i % 8 == 0\n",
+    "            s = s * \"|\"\n",
+    "        endd\n",
+    "    end\n",
+    "    s = replace(s, \"[]\" => \"z\")\n",
+    "    s = replace(s, \"!>!\" => \"!>![I: volinc 50]\")\n",
+    "    s = replace(s, \"u\" => \"!anti![I: volinc -20]\")\n",
+    "    return(s)\n",
+    "end\n"
+   ]
   }
  ],
  "metadata": {
