Fixed-volume ghost notes

--- a/markov16pat_inst16ghost.ipynb
+++ b/markov16pat_inst16ghost.ipynb
@@ -1049,7 +1049,7 @@
     "    \n",
     "    #ifdef MIDI\n",
     "    #define !>! \\\"[I:volinc 50]\\\"\n",
-    "    #define !Q! \\\"[I:volinc -30]\\\" \n",
+    "    #define !Q! \\\"[I:vol 20]\\\" \n",
     "                    %%%ghost\n",
     "    #define !U! \\\"[I:volinc -20]\\\" \n",
     "                    %%%unaccent\n",
