Obsoleted the "pat_inst16bass" files

--- a/markov16pat_inst16ghost.ipynb
+++ b/markov16pat_inst16ghost.ipynb
@@ -228,6 +228,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4 Matrix{Float64}:\n",
+       " 0.1   0.333333  0.333333  1.0\n",
+       " 0.0   0.333333  0.0       0.0\n",
+       " 0.45  0.333333  0.333333  0.0\n",
+       " 0.45  0.0       0.333333  0.0"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rockNoGhostBMatrix = [0.1e0 1//3 1//3 1; 0 1//3 0 0; 0.45e0 1//3 1//3 0; 0.45e0 0 1//3 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9-element Vector{Float64}:\n",
+       " 0.1\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.5\n",
+       " 0.4\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rockNoGhostBInitial = [0.1e0,0, 0,0.5e0,0.4e0, 0, 0, 0, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AugMatrix([0.1 0.3333333333333333 … 0.0 0.0; 0.0 0.3333333333333333 … 0.0 0.0; … ; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0], [0.1, 0.0, 0.0, 0.5, 0.4, 0.0, 0.0, 0.0, 0.0])"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rockNoGhostB = AugMatrix([rockNoGhostBMatrix[1:2, 1:2] zeros(2,1) rockNoGhostBMatrix[1:2, 3:4] zeros(2, 4)\n",
+    "    zeros(1, 9)\n",
+    "    rockNoGhostBMatrix[3:4, 1:2] zeros(2,1) rockNoGhostBMatrix[3:4, 3:4] zeros(2, 4)\n",
+    "    zeros(4, 9)\n",
+    "    ],\n",
+    "    rockNoGhostBInitial)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -1233,6 +1311,143 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "%%abc-include percussions-JBH.abh\n",
+      "\n",
+      "I:linebreak $\n",
+      "\n",
+      "#ifdef MIDI\n",
+      "#define !>! \"[I:volinc 50]\"\n",
+      "#define !Q! \"[I:vol 20]\" \n",
+      "                %%%ghost\n",
+      "#define !U! \"[I:volinc -20]\" \n",
+      "                %%%unaccent\n",
+      "#else\n",
+      "#define !N! \"\\\"^_\\\"\" \n",
+      "                %%%tenuto\n",
+      "#define !Q! !(.!!).! \n",
+      "                %%%ghost\n",
+      "#define !U! !anti!  \n",
+      "                %%%unaccent\n",
+      "#endif\n",
+      "\n",
+      "X:1\n",
+      "T:Computer-generated \\`Etude for Solo Drum Kit\n",
+      "C:abcsolo16patinst16ghost\n",
+      "O:2021-11-22T16:55:28.298\n",
+      "M:4/4\n",
+      "L:1/8\n",
+      "Q:\"Rock 16th feel\" 1/4=80\n",
+      "K:none clef=perc\n",
+      "[V:1 clef=perc, stem=up]     % activate abc2xml.py map\n",
+      "%%voicemap drummap  % activate abcm2ps/abc2svg map\n",
+      "%%MIDI channel 10   % activate abc2midi map\n",
+      "%%MIDI program 0\n",
+      "%%flatbeams\n",
+      "%%propagate-accidentals not\n",
+      "%%pos ornament up\n",
+      "%%ornament up\n",
+      "%%MIDI fermatafixed\n",
+      "|:!pp![^eF]/2[^e]/2[^e]/2[^e!Q!c]/2 [c^eF]/2[^eF]/2[^e]/2[^e]/2 [^eF]/2[^e]/2[^eF]/2[^e]/2 [c^eF]/2[^e]/2[^e]/2[^e!Q!c]/2 |\n",
+      "[^eF]/2[^e]/2[^eF]/2[^eF]/2 [c^e]/2[^e!Q!c]/2[^eF]/2[^eF]/2 [^e]/2[^e!Q!c]/2[^eF]/2[^e]/2 [c^e]/2[^e]/2[^eF]/2[^e]/2 |\n",
+      "[^eF]/2[^eF]/2[^e]/2[^e!Q!c]/2 [c^eF]/2[^eF]/2[^e]/2[^e]/2 [^e]/2[^e]/2[^eF]/2[^e]/2 [c^eF]/2[^e]/2[^e]/2[^e]/2 |\n",
+      "[1G/2e/2z/2e/2 e/2G/2z/2c/2 F/2e/2e/2A/2 z/2e/2F/2e/2 :|2G/2e/2z/2e/2 e/2G/2z/2c/2 F/2e/2e/2A/2 !<(!z/2e/2!<)!F/2e/2 \n",
+      "|:!p![^g^DF]/2[^g]/2[^gF]/2[^gF]/2 [c^g^D]/2[^g]/2[^gF]/2[^gF]/2 [^g^D]/2[^g]/2[^gF]/2[^gF]/2 [c^g^D]/2[^g!Q!c]/2[^gF]/2[^g]/2 |\n",
+      "[^g^D]/2[^g!Q!c]/2[^gF]/2[^g]/2 [c^g^D]/2[^g]/2[^gF]/2[^g]/2 [^g^DF]/2[^g]/2[^gF]/2[^g]/2 [c^g^D]/2[^g!Q!c]/2[^gF]/2[^gF]/2 |\n",
+      "[^g^D]/2[^g]/2[^gF]/2[^gF]/2 [c^g^D]/2[^g!Q!c]/2[^gF]/2[^gF]/2 [^g^D]/2[^g!Q!c]/2[^g]/2[^g!Q!c]/2 [c^g^DF]/2[^g]/2[^gF]/2[^gF]/2 |\n",
+      "[1e/2G/2A/2c/2 c/2A/2c/2e/2 G/2F/2c/2F/2 e/2A/2e/2e/2 :|2e/2G/2A/2c/2 c/2A/2c/2e/2 G/2F/2c/2F/2 !<(!e/2A/2!<)!e/2e/2 \n",
+      "|:!mp![g]/2z/2[gF]/2z/2 [cg]/2[!Q!c]/2[gF]/2[F]/2 [g]/2z/2[gF]/2[F]/2 [cg]/2z/2[gF]/2[F]/2 |\n",
+      "[g]/2z/2[g]/2z/2 [cgF]/2[F]/2[g]/2z/2 [gF]/2z/2[gF]/2z/2 [cg]/2z/2[gF]/2z/2 |\n",
+      "[gF]/2[F]/2[g]/2[!Q!c]/2 [cgF]/2z/2[g]/2[!Q!c]/2 [gF]/2z/2[g]/2[!Q!c]/2 [cgF]/2z/2[gF]/2z/2 |\n",
+      "[1G/2G/2c/2c/2 c/2F/2G/2F/2 e/2A/2A/2G/2 z/2F/2e/2c/2 :|2G/2G/2c/2c/2 c/2F/2G/2F/2 e/2A/2A/2G/2 !<(!z/2F/2!<)!e/2c/2 \n",
+      "|:!f![^e]/2[^e!Q!c]/2[^eF]/2[^e]/2 [c^eF]/2[^eF]/2[^e]/2[^e!Q!c]/2 [^eF]/2[^eF]/2[^e]/2[^e]/2 [c^e]/2[^e]/2[^e]/2[^e]/2 |\n",
+      "[^eF]/2[^e]/2[^e]/2[^e!Q!c]/2 [c^eF]/2[^e]/2[^eF]/2[^e]/2 [^eF]/2[^e]/2[^eF]/2[^e]/2 [c^eF]/2[^eF]/2[^e]/2[^e!Q!c]/2 |\n",
+      "[^eF]/2[^e]/2[^eF]/2[^e]/2 [c^e]/2[^e!Q!c]/2[^eF]/2[^eF]/2 [^e]/2[^e!Q!c]/2[^eF]/2[^e]/2 [c^eF]/2[^eF]/2[^e]/2[^e!Q!c]/2 |\n",
+      "[1A/2G/2z/2G/2 c/2z/2z/2c/2 e/2z/2z/2G/2 G/2z/2z/2c/2 :|2A/2G/2z/2G/2 c/2z/2z/2c/2 e/2z/2z/2G/2 !>(!G/2z/2!>)!z/2!fermata!c/2 \n",
+      "|]\n"
+     ]
+    }
+   ],
+   "source": [
+    "NoGhostSolo = abcsolo16patinst16ghost(4, rockNoGhostB, rockFill, dyn, rockPat, rockInst, \"Rock 16th feel\")\n",
+    "print(NoGhostSolo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcm2ps-8.14.12 (2021-07-14)\r\n",
+      "File rocknoghosttest-ps.abc\r\n",
+      "File percussions-JBH.abh\r\n",
+      "Output written on rocknoghosttest.xhtml (1 page, 1 title, 54401 bytes)\r\n",
+      "4.59 June 27 2021 abc2midi\r\n",
+      "Warning in line-char 24-5 : instruction !N! ignored\r\n",
+      "Warning in line-char 24-20 : instruction !N! ignored\r\n",
+      "Warning in line-char 24-33 : instruction !N! ignored\r\n",
+      "Warning in line-char 24-47 : instruction !N! ignored\r\n",
+      "Warning in line-char 24-60 : instruction !N! ignored\r\n",
+      "Warning in line-char 24-73 : instruction !N! ignored\r\n",
+      "Warning in line-char 24-89 : instruction !N! ignored\r\n",
+      "Warning in line-char 24-102 : instruction !N! ignored\r\n",
+      "Warning in line-char 25-0 : instruction !N! ignored\r\n",
+      "Warning in line-char 25-12 : instruction !N! ignored\r\n",
+      "Warning in line-char 25-25 : instruction !N! ignored\r\n",
+      "Warning in line-char 25-41 : instruction !N! ignored\r\n",
+      "Warning in line-char 25-54 : instruction !N! ignored\r\n",
+      "Warning in line-char 25-67 : instruction !N! ignored\r\n",
+      "Warning in line-char 25-80 : instruction !N! ignored\r\n",
+      "Warning in line-char 25-94 : instruction !N! ignored\r\n",
+      "Warning in line-char 26-0 : instruction !N! ignored\r\n",
+      "Warning in line-char 26-15 : instruction !N! ignored\r\n",
+      "Warning in line-char 26-28 : instruction !N! ignored\r\n",
+      "Warning in line-char 26-44 : instruction !N! ignored\r\n",
+      "Warning in line-char 26-57 : instruction !N! ignored\r\n",
+      "Warning in line-char 26-72 : instruction !N! ignored\r\n",
+      "Warning in line-char 26-85 : instruction !N! ignored\r\n",
+      "Warning in line-char 26-101 : instruction !N! ignored\r\n",
+      "writing MIDI file rocknoghosttest.mid\r\n",
+      "Warning in line-char 40-0 : Track 1 Bar 19 has 9/2 units instead of 4 in repeat\r\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "rocknoghosttest-ps.abc:29:47: warning: Line overfull (635pt of 628pt)\r\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Process(`\u001b[4mcmd\u001b[24m \u001b[4m/C\u001b[24m \u001b[4mstart\u001b[24m \u001b[4mrocknoghosttest.xhtml\u001b[24m`, ProcessExited(0))"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#write a string to a file\n",
+    "open(f->print(f, NoGhostSolo), \"rocknoghosttest.abp\", \"w\")\n",
+    "#Converts ABP file to score and MIDI and displays/plays it\n",
+    "abptest(\"rocknoghosttest.abp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
    "outputs": [
@@ -1357,6 +1572,84 @@
    ],
    "source": [
     "funkBass = AugMatrix(funkBassMatrix, funkBassInitial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4 Matrix{Float64}:\n",
+       " 0.1  0.333333  0.25  0.5\n",
+       " 0.3  0.333333  0.25  0.5\n",
+       " 0.3  0.333333  0.25  0.0\n",
+       " 0.3  0.0       0.25  0.0"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funkNoGhostBMatrix = [0.1e0 1//3 0.25e0 0.5e0; 0.3e0 1//3 0.25e0 0.5e0; 0.3e0 1//3 0.25e0 0; 0.3e0 0 0.25e0 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9-element Vector{Float64}:\n",
+       " 0.1\n",
+       " 0.1\n",
+       " 0.0\n",
+       " 0.4\n",
+       " 0.4\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funkNoGhostBInitial = [0.1e0, 0.1e0, 0, 0.4e0, 0.4e0, 0, 0, 0, 0 ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AugMatrix([0.1 0.3333333333333333 … 0.0 0.0; 0.3 0.3333333333333333 … 0.0 0.0; … ; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0], [0.1, 0.1, 0.0, 0.4, 0.4, 0.0, 0.0, 0.0, 0.0])"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funkNoGhostB = AugMatrix([funkNoGhostBMatrix[1:2, 1:2] zeros(2,1) funkNoGhostBMatrix[1:2, 3:4] zeros(2, 4)\n",
+    "    zeros(1, 9)\n",
+    "    funkNoGhostBMatrix[3:4, 1:2] zeros(2,1) funkNoGhostBMatrix[3:4, 3:4] zeros(2, 4)\n",
+    "    zeros(4, 9)\n",
+    "    ],\n",
+    "    funkNoGhostBInitial)"
    ]
   },
   {
@@ -1824,6 +2117,133 @@
    "source": [
     "#Converts ABP file to score and MIDI and displays/plays it\n",
     "abptest(\"funkghosttest.abp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "%%abc-include percussions-JBH.abh\n",
+      "\n",
+      "I:linebreak $\n",
+      "\n",
+      "#ifdef MIDI\n",
+      "#define !>! \"[I:volinc 50]\"\n",
+      "#define !Q! \"[I:vol 20]\" \n",
+      "                %%%ghost\n",
+      "#define !U! \"[I:volinc -20]\" \n",
+      "                %%%unaccent\n",
+      "#else\n",
+      "#define !N! \"\\\"^_\\\"\" \n",
+      "                %%%tenuto\n",
+      "#define !Q! !(.!!).! \n",
+      "                %%%ghost\n",
+      "#define !U! !anti!  \n",
+      "                %%%unaccent\n",
+      "#endif\n",
+      "\n",
+      "X:1\n",
+      "T:Computer-generated \\`Etude for Solo Drum Kit\n",
+      "C:abcsolo16patinst16ghost\n",
+      "O:2021-11-22T19:04:01.226\n",
+      "M:4/4\n",
+      "L:1/8\n",
+      "Q:\"Funk 16th feel\" 1/4=80\n",
+      "K:none clef=perc\n",
+      "[V:1 clef=perc, stem=up]     % activate abc2xml.py map\n",
+      "%%voicemap drummap  % activate abcm2ps/abc2svg map\n",
+      "%%MIDI channel 10   % activate abc2midi map\n",
+      "%%MIDI program 0\n",
+      "%%flatbeams\n",
+      "%%propagate-accidentals not\n",
+      "%%pos ornament up\n",
+      "%%ornament up\n",
+      "%%MIDI fermatafixed\n",
+      "|:!f!!>![^eF]/2!U![^e]/2!>![^eF]/2!U![^e]/2 !>![c^e]/2!U![^e]/2!>![^eF]/2!U![^e]/2 !>![^e]/2!U![^eF]/2!>![^eF]/2!U![^e]/2 !>![c^eF]/2!U![^e]/2!>![^eF]/2!U![^e]/2 |\n",
+      "!>![^e]/2!U![^e]/2!>![^eF]/2!U![^e]/2 !>![c^e]/2!U![^eF]/2!>![^e]/2!U![^eF]/2 !>![^eF]/2!U![^e]/2!>![^e]/2!U![^eF]/2 !>![c^e]/2!U![^e]/2!>![^eF]/2!U![^eF]/2 |\n",
+      "!>![^e]/2!U![^e]/2!>![^e]/2!U![^eF]/2 !>![c^e]/2!U![^e]/2!>![^eF]/2!U![^eF]/2 !>![^e]/2!U![^e]/2!>![^eF]/2!U![^e]/2 !>![c^e]/2!U![^eF]/2!>![^e]/2!U![^e]/2 |\n",
+      "[1G/2F/2F/2e/2 F/2c/2e/2G/2 A/2G/2z/2G/2 c/2e/2e/2e/2 :|2G/2F/2F/2e/2 F/2c/2e/2G/2 A/2G/2z/2G/2 !<(!c/2e/2!<)!e/2e/2 \n",
+      "|:!p![^gF]/2[^gF]/2[^g]/2[^g]/2 [c^gF]/2[^gF]/2[^g]/2[^g]/2 [^g]/2[^gF]/2[^gF]/2[^g]/2 [c^gF]/2[^gF]/2[^g]/2[^gF]/2 |\n",
+      "[^g]/2[^gF]/2[^g]/2[^g]/2 [c^gF]/2[^g]/2[^gF]/2[^gF]/2 [^g]/2[^g]/2[^gF]/2[^gF]/2 [c^g]/2[^gF]/2[^g]/2[^g]/2 |\n",
+      "[^gF]/2[^gF]/2[^g]/2[^g]/2 [c^gF]/2[^g]/2[^gF]/2[^g]/2 [^g]/2[^g]/2[^gF]/2[^g]/2 [c^g]/2[^gF]/2[^g]/2[^gF]/2 |\n",
+      "[1e/2A/2A/2G/2 G/2e/2c/2e/2 e/2z/2z/2A/2 A/2c/2e/2A/2 :|2e/2A/2A/2G/2 G/2e/2c/2e/2 e/2z/2z/2A/2 !>(!A/2c/2!>)!e/2A/2 \n",
+      "|:!f![gF]/2[^gF]/2[g]/2[^g]/2 [cgF]/2[^g]/2[g]/2[^g]/2 [g]/2[^gF]/2[g]/2[^g]/2 [cgF]/2[^g]/2[gF]/2[^g]/2 |\n",
+      "[g]/2[^gF]/2[g]/2[^g]/2 [cgF]/2[^g]/2[g]/2[^gF]/2 [g]/2[^g]/2[g]/2[^gF]/2 [cgF]/2[^g]/2[g]/2[^gF]/2 |\n",
+      "[g]/2[^gF]/2[gF]/2[^g]/2 [cgF]/2[^gF]/2[g]/2[^gF]/2 [g]/2[^gF]/2[g]/2[^gF]/2 [cgF]/2[^g]/2[g]/2[^gF]/2 |\n",
+      "[1e/2A/2A/2G/2 e/2z/2e/2z/2 e/2e/2z/2c/2 A/2c/2e/2A/2 :|2e/2A/2A/2G/2 e/2z/2e/2z/2 e/2e/2z/2c/2 !<(!A/2c/2!<)!e/2A/2 \n",
+      "|:!pp![^g]/2z/2[^g]/2[F]/2 [c^g]/2z/2[^g]/2[F]/2 [^g]/2[F]/2[^g]/2z/2 [c^gF]/2[F]/2[^g]/2z/2 |\n",
+      "[^g]/2z/2[^g]/2[F]/2 [c^g]/2[F]/2[^g]/2z/2 [^gF]/2z/2[^g]/2z/2 [c^gF]/2[F]/2[^g]/2z/2 |\n",
+      "[^gF]/2[F]/2[^g]/2z/2 [c^gF]/2z/2[^gF]/2[F]/2 [^g]/2[F]/2[^g]/2z/2 [c^g]/2z/2[^gF]/2z/2 |\n",
+      "[1F/2e/2F/2c/2 c/2A/2e/2F/2 F/2F/2F/2z/2 e/2c/2e/2z/2 :|2F/2e/2F/2c/2 c/2A/2e/2F/2 F/2F/2F/2z/2 !>(!e/2c/2!>)!!fermata!e/2z/2 \n",
+      "|]\n"
+     ]
+    }
+   ],
+   "source": [
+    "funkNoGhostsolo = abcsolo16patinst16ghost(4, funkNoGhostB, funkFill, dyn, funkPat, funkInst, \"Funk 16th feel\")\n",
+    "print(funkNoGhostsolo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#write a string to a file\n",
+    "open(f->print(f, funkNoGhostsolo), \"funknoghosttest.abp\", \"w\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcm2ps-8.14.12 (2021-07-14)\r\n",
+      "File funknoghosttest-ps.abc\r\n",
+      "File percussions-JBH.abh\r\n",
+      "Output written on funknoghosttest.xhtml (1 page, 1 title, 58857 bytes)\r\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "funknoghosttest-ps.abc:29:47: warning: Line overfull (635pt of 628pt)\r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.59 June 27 2021 abc2midi\r\n",
+      "writing MIDI file funknoghosttest.mid\r\n",
+      "Warning in line-char 40-0 : Track 1 Bar 19 has 9/2 units instead of 4 in repeat\r\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Process(`\u001b[4mcmd\u001b[24m \u001b[4m/C\u001b[24m \u001b[4mstart\u001b[24m \u001b[4mfunknoghosttest.xhtml\u001b[24m`, ProcessExited(0))"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Converts ABP file to score and MIDI and displays/plays it\n",
+    "abptest(\"funknoghosttest.abp\")"
    ]
   },
   {
