--- a/markov16shuffle16ghost.ipynb
+++ b/markov16shuffle16ghost.ipynb
@@ -262,7 +262,7 @@
     }
    ],
    "source": [
-    "#input a shiffled 16th bass rhythm and a shuffled 16th ride pattern, output abc notation\n",
+    "#input a shuffled 16th bass rhythm and a shuffled 16th ride pattern, output abc notation\n",
     "function abctime24patinst24ghost(L, pattern, instr)\n",
     "    n = length(L)\n",
     "    r = lookup16ride()\n",
